<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EntryActivity" >

    <TextView
        android:id="@+id/textViewSelectDict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroupSelectDict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp" >

        <RadioButton
            android:id="@+id/radio_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/selectEnglish" />

        <RadioButton
            android:id="@+id/radio_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectRussian" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonEntry_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_txt_ok" />

    <CheckBox
        android:id="@+id/checkBoxEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEntry_ok"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        android:checked="true"
        android:text="@string/enrty_checkbox_txt" />

</RelativeLayout>