<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrap_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ButtonsInputActivity" >

    <LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal" >

    </LinearLayout>
    
     <LinearLayout
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"  >
 

    <LinearLayout
        android:id="@+id/answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:minHeight="80dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:minHeight="48dp"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/info_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/level"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/step"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/info_attempt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/attempt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/view_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/score_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/view_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/record"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" >

        <Button
            android:id="@+id/button_hint"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_4dp"
            android:layout_marginRight="@dimen/space_4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_button"
            android:shadowColor="@color/brown_deep"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="4"
            android:text="@string/button_txt_hint" />

        <Button
            android:id="@+id/button_next"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_4dp"
            android:layout_marginRight="@dimen/space_4dp"
            android:layout_weight="1"
            android:background="@drawable/rect_button"
            android:shadowColor="@color/brown_deep"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="4"
            android:text="@string/button_txt_next" />
    </LinearLayout>

    <EditText
        android:id="@+id/magicWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_magicWord"
        android:inputType="text"
        android:visibility="gone" >

        <requestFocus />
    </EditText>

   
       

    </LinearLayout>

</LinearLayout>